Modeller oluşturuldu ve basit controller implement edildi

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
     hikari:
       connection-timeout: 20000
       maximum-pool-size: 5
-    url: jdbc:postgresql://localhost:5432/garanti_belgeleri
+    url: jdbc:postgresql://localhost:5432/price_analyzer
     username: kanilturgut
     password: admin
 
